--- a/HLMHome/Tpl/Account/login.html
+++ b/HLMHome/Tpl/Account/login.html
@@ -6,9 +6,8 @@
 		<div class="title"><span id="title">登录</span></div>
 		<div class="info"> 
 			<div class="row">
-				<span class="key">邮箱</span>
-				<input class="value num" type="text" id="username" placeholder="请输入注册时的一卡通"/>
-				<span class="text">@seu.edu.cn</span>
+				<span class="key">账号</span>
+				<input class="value" type="text" id="username" placeholder="请输入注册邮箱/手机号/用户名"/>
 				<span class="tip" id="usernamealert"></span>
 			</div>
 			<div class="row">
